@@ -1,5 +1,6 @@
 package com.l7bug.system.security;
 
+import com.l7bug.system.domain.user.Status;
 import lombok.Data;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -7,7 +8,9 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.io.Serial;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 /**
  * UserDetails
@@ -23,9 +26,21 @@ public class UserDetailsImpl implements UserDetails {
 	private String username;
 	private String nickname;
 	private String password;
+	private Status status;
+	private Collection<String> authoritiesSet = List.of("READ", "WRITE");
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return List.of(new SimpleGrantedAuthority("READ"));
+		return Optional.ofNullable(authoritiesSet)
+			.orElse(Collections.emptyList())
+			.stream()
+			.map(SimpleGrantedAuthority::new)
+			.toList();
 	}
+
+	@Override
+	public boolean isEnabled() {
+		return status == Status.ENABLE;
+	}
+
 }
